Fix layout and button alignment issues

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body {
     text-align: center;
 }
 
+
 .popup-content button {
     font-family: "Lato-Medium", Helvetica;
     font-size: 16px;
@@ -997,7 +998,7 @@ button.close:hover {
     transform: translate(-50%, -40%);
     width: 400px;
     z-index: 1000;
-    height: 210px;
+    height: auto;
 
 }
 
@@ -1088,6 +1089,7 @@ button.close:hover {
 
 #closeEditCategoryPopup {
     border: none;
+    align-self: flex-end;
     border-radius: 10px;
     color: black;
     background-color: #6c757d;
